--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -4,11 +4,11 @@
       <div class="col-sm-12">
         <mat-form-field class="example-full-width">
           <input matInput (click)="onDate(dateOfDelivery)" [matDatepicker]="picker" [(ngModel)]="dateOfDelivery" name="dateOfDelivery"
-            required placeholder="Choose a date">
+            required placeholder="Choose a date" style="margin-right:10px">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker touchUi #picker></mat-datepicker>
         </mat-form-field>
-        <button (click)="onDate()">Get Data</button>
+        <button (click)="onDate()" style="border-radius:8px;background-color:deepskyblue">Get Data</button>
       </div>
       <div class="col-sm-12">
         <mat-radio-group>
@@ -17,22 +17,61 @@
           <mat-radio-button value="3" (click)="timePrint(2)">Slot-3</mat-radio-button>
         </mat-radio-group>
         <div class="col-sm-12">
-          <button type="submit" (click)="slotPrint(0)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle
-            1
+          <button type="submit" (click)="slotPrint(0)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle 1
           </button>&nbsp;
-          <button type="submit" (click)="slotPrint(1)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle
-            2</button>&nbsp;
-          <button type="submit" (click)="slotPrint(2)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle
-            3</button>
-
+          <button type="submit" (click)="slotPrint(1)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle 2</button>&nbsp;
+          <button type="submit" (click)="slotPrint(2)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle 3</button>
         </div>
       </div>
     </div>
+        <div class="row">
+          <div class="col-sm-4">
+              <div *ngIf=pieChartData1>
+            <canvas baseChart [data]="pieChartData1" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)"
+              (chartClick)="chartClicked($event)"></canvas>
+          </div>
+        </div>
+        
+          <div class="col-sm-4">
+              <div *ngIf=pieChartData2>
+            <canvas baseChart [data]="pieChartData2" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)"
+              (chartClick)="chartClicked($event)"></canvas>
+          </div>
+        </div>
+        
+          <div class="col-sm-4">
+              <div *ngIf=pieChartData2>
+            <canvas baseChart [data]="pieChartData3" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)"
+              (chartClick)="chartClicked($event)"></canvas>
+          </div>
+        </div>
+        <div class="col-sm-4" style="background-color:lavender;">
+          <div *ngIf=doughnutChartData>
+            <canvas baseChart [datasets]="barChartData1" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
+              [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+          </div>
+        </div>
+        <div class="col-sm-4" style="background-color:lavender;">
+            <div *ngIf=doughnutChartData>
+              <canvas baseChart [datasets]="barChartData2" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
+                [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+            </div>
+          </div>
+          <div class="col-sm-4" style="background-color:lavender;">
+              <div *ngIf=doughnutChartData>
+                <canvas baseChart [datasets]="barChartData3" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
+                  [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+              </div>
+            </div>
+            <div class="col-sm-6" style="background-color:lavender;">
+                <div *ngIf=doughnutChartData>
+                  <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
+                    (chartClick)="chartClicked($event)"></canvas>
+                </div>
+              </div>
+    </div>
   </div>
 </form>
-<br>
-<br>
-<br>
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-6" style="background-color:lavender;">
@@ -43,5 +82,6 @@
         </agm-map>
       </div>
     </div>
+   
   </div>
 </div>
